package main;
import states.EmEspera;
import states.State;

public class Main{
    public static void main (String args[]){
        QuiosqueContext quiosque = new QuiosqueContext();

        quiosque.start();
    }
}